--- a/.env
+++ b/.env
@@ -19,5 +19,8 @@ CRIBL_HOST_PORT=9000
 # AppScope version
 APPSCOPE_VERSION=1.0.0
 
+# Appscope destination
+APPSCOPE_DEST=tcp://cribl01:10070
+
 # Virtual memory settings
 VM_EXPECTED_LIMIT=262144
