Export kibana configuration file to .env file

--- a/.env
+++ b/.env
@@ -10,6 +10,9 @@ KIBANA_VERSION=7.17.0
 # Kibana host port
 KIBANA_HOST_PORT=5601
 
+# Kibana configuration file
+KIBANA_CFG_FILE=elastic_cfg.ndjson
+
 # Logstream version
 CRIBL_VERSION=3.3.0
 
