Add encryption key

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,7 @@ services:
     environment:
       ELASTICSEARCH_URL: http://es01:9200
       ELASTICSEARCH_HOSTS: '["http://es01:9200","http://es02:9200","http://es03:9200"]'
+      XPACK_ENCRYPTEDSAVEDOBJECTS_ENCRYPTIONKEY: "fCbfqHcHimbCoET3WEnVgkBK8ddXchWWBMLNzqmdNkwbaMHBGj89DvexgayzUEqe"
     networks:
       - elastic
 
