Rename from "Logstream" to "Stream"
- bump docker image version 3.3.1 -> 3.4.0

--- a/.env
+++ b/.env
@@ -13,10 +13,10 @@ KIBANA_HOST_PORT=5601
 # Kibana configuration file
 KIBANA_CFG_FILE=elastic_cfg.ndjson
 
-# Logstream version
-CRIBL_VERSION=3.3.1
+# Stream version
+CRIBL_VERSION=3.4.0
 
-# Logstream host port
+# Stream host port
 CRIBL_HOST_PORT=9000
 
 # AppScope version
