--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ CRIBL_VERSION=3.4.0
 CRIBL_HOST_PORT=9000
 
 # AppScope version
-APPSCOPE_VERSION=1.0.3
+APPSCOPE_VERSION=dev-x86_64
 
 # Appscope destination
 APPSCOPE_DEST=tcp://cribl01:10070
