Add seperate container for TLS communication
- `appscope01_tls` can be used to scope individual commands and use
  TLS destination path
- use TCP source destination with TLS enabled

--- a/.env
+++ b/.env
@@ -22,8 +22,14 @@ CRIBL_HOST_PORT=9000
 # AppScope version
 APPSCOPE_VERSION=1.0.3
 
-# Appscope destination
+# AppScope destination (TCP)
 APPSCOPE_DEST=tcp://cribl01:10070
+
+# AppScope destination (TLS)
+APPSCOPE_DEST_TLS=tcp://cribl01:10071
+
+# AppScope certification file (TLS)
+TLS_CA_CERT="/opt/domain.crt"
 
 # Virtual memory settings
 VM_EXPECTED_LIMIT=262144
