--- a/cribl/inputs.yml
+++ b/cribl/inputs.yml
@@ -16,3 +16,23 @@ inputs:
         pipeline: ""
       - output: file_id
         pipeline: ""
+  in_tcp_json_tls:
+    disabled: false
+    host: 0.0.0.0
+    tls:
+      disabled: false
+      requestCert: false
+      privKeyPath: /opt/domain.key
+      certPath: /opt/domain.crt
+    ipWhitelistRegex: /.*/
+    enableProxyHeader: false
+    authToken: ""
+    type: tcpjson
+    port: 10071
+    authType: manual
+    sendToRoutes: false
+    connections:
+      - output: elastic-out4
+        pipeline: ""
+      - output: file_id
+        pipeline: ""
