Change starting instruction for `appscope02`
- add ticks for echo message

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,7 @@ services:
       SCOPE_EVENT_FS: "true"
       SCOPE_CRIBL: "${APPSCOPE_DEST:-tcp://cribl01:10070}"
       SCOPE_TAG_container_name: "appscope02"
+    tty: true
     networks:
       - elastic
 
