--- a/cribl/outputs.yml
+++ b/cribl/outputs.yml
@@ -14,6 +14,7 @@ outputs:
     safeHeaders: []
     auth:
       disabled: true
+      authType: manual
     elasticVersion: auto
     onBackpressure: block
     type: elastic
