Add Splunk destination

--- a/.env
+++ b/.env
@@ -13,6 +13,9 @@ KIBANA_HOST_PORT=5601
 # Kibana configuration file
 KIBANA_CFG_FILE=elastic_cfg.ndjson
 
+# Splunk version
+SPLUNK_VERSION=8.2.6
+
 # Stream version
 CRIBL_VERSION=3.4.2
 
