--- a/cribl/inputs.yml
+++ b/cribl/inputs.yml
@@ -34,6 +34,8 @@ inputs:
         pipeline: ""
       - output: file-out1
         pipeline: ""
+      - output: splunk-out1
+        pipeline: ""
   in_tcp_json_tls:
     disabled: true
     sendToRoutes: false
@@ -77,4 +79,6 @@ inputs:
       - output: elastic-out1
         pipeline: ""
       - output: file-out1
+        pipeline: ""
+      - output: splunk-out1
         pipeline: ""
