--- a/cribl/outputs.yml
+++ b/cribl/outputs.yml
@@ -1,5 +1,5 @@
 outputs:
-  elastic-out4:
+  elastic-out1:
     systemFields: []
     streamtags: []
     concurrency: 5
@@ -21,7 +21,7 @@ outputs:
     url: http://es01:9200/_bulk
     index: cribl
     docType: _doc
-  file_id:
+  file-out1:
     systemFields: []
     streamtags: []
     addIdToStagePath: true
