[WIP] SSHD scoping

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ CRIBL_VERSION=3.4.2
 CRIBL_HOST_PORT=9000
 
 # AppScope version
-APPSCOPE_VERSION=1.1.0
+APPSCOPE_VERSION=dev-x86_64
 
 # AppScope destination (TCP)
 APPSCOPE_DEST=tcp://cribl01:10090
